# skeleton_filter

./: CMakeLists.txt  README.md  package.xml
include/skeleton_filter/: Filter.h  KinematicStateFilter.h  MarkerFilter.h  OrientationFilter.h  SkeletonFilter.h
launch/: custom_configuration_example.launch  default.launch  default.launch.py
src/: Filter.cpp  KinematicStateFilter.cpp  MarkerFilter.cpp  OrientationFilter.cpp  SkeletonFilter.cpp  main.cpp
