<?xml version="1.0"?>
<package format="2">
  <name>hiros_skeleton_filter</name>
  <version>0.1.0</version>
  <description>Hi-ROS mantained skeleton filter package</description>
  <maintainer email="mattia.guidolin@phd.unipd.it">mguidolin @ Hi-ROS</maintainer>
  <license>TODO</license>

  <url type="website">https://gitlab.com/hi-ros</url>
  <author email="mattia.guidolin@phd.unipd.it">Mattia Guidolin</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>hiros_skeleton_msgs</depend>
</package>
